Fixed issue wms-12229 related to lengthy tab names by wrapping up once the text is too long.

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -2195,6 +2195,7 @@ If the height and width are not specified the video takes the height of the post
 .app-datanavigator {
   position: relative;
   overflow-y: auto;
+
   ul.pagination, ul.pager, .pagination {
     margin : 0;
     & > li.pagecount > a {
@@ -3202,6 +3203,8 @@ If the height and width are not specified the video takes the height of the post
           > a {
             margin: 0;
             border-radius: 0;
+            white-space: initial;
+            word-break: break-word;
           }
           &.active {
             > a {
